testsuite/positive/Issue-git-0264.n
using System;
using System.Console;
using Nemerle;

partial variant V
{
  partial | B
          {
            public b : int { [Memoize] get { int.Parse(a) } }
            [RecordIgnore] mutable x : int;
          }
}

partial variant V
{
  partial | B { a : string; }
}

public module Program
{
  Main() : void
  {
    def x  = V.B("42");
    
    match (x)
    {
      | V.B("42") as z when z.b == 42 => z.x = 220; WriteLine("OK! 42!");
      | _ => WriteLine("Fail");
    }
  }
}

/*
BEGIN-OUTPUT
OK! 42!
END-OUTPUT
*/
