testsuite/negative/Issue-git-0264.n
using System;
using System.Console;
using Nemerle;

// We can not allow add fields in different parts of a variant option.
partial variant V
{
  partial | B 
          {
            public b : int { [Memoize] get { int.Parse(a) } }
            x : int; // H: related field definition in other part
          }
}

partial variant V
{
  partial | B { a : string; } // E: Only fields of one a part of a partial
}

public module Program
{
  Main() : void
  {

  }
}